fixed horizontal scroll

--- a/src/components/sass/Abouthero.scss
+++ b/src/components/sass/Abouthero.scss
@@ -1,17 +1,20 @@
-html {
-	overflow-y: scroll;
-	height: 100%;
-	-webkit-overflow-scrolling: touch;
-	// overflow-scrolling: touch;
-}
-body {
-	overflow-y: visible;
-	position: relative;
-    height: unset;
-}
-html, body {
-	overflow-x: hidden;
-	margin: 0;
+// html {
+// 	overflow-y: scroll;
+// 	height: 100%;
+// 	-webkit-overflow-scrolling: touch;
+// 	// overflow-scrolling: touch;
+// }
+// body {
+// 	overflow-y: visible;
+// 	position: relative;
+//     height: unset;
+// }
+// html, body {
+// 	overflow-x: hidden;
+// 	margin: 0;
+// }
+.wrapper{
+    overflow-x:hidden;
 }
 .container{
     width: 200vw;
